# silvery-armlab-f22

./: .gitignore  BlockDetectionPytorch.ipynb  Doxyfile  README.md  armlab_gui.ui  block_detection.py  camera.py  config_parse.py  control_station.py  data1.csv  gazebo_shim.py  gazebo_shim_setup.sh  interbotix_robot_arm.py  kinematics.py  label_generation.py  launch_armlab.sh  launch_armlab_gazebo.sh  launch_rxarm.sh  model.py  reboot_all_servos  rxarm.py  sample_block_config.json  state_machine.py  svm_train.py  ui.py  utils.py
Install_Scripts/: install_Dependencies.sh  install_Interbotix.sh  install_LaunchFiles.sh  install_interbotix.sh
Install_Scripts/config/: README.txt  rs_435i.launch  rs_l515.launch  settings.yaml  tags.yaml
URDFs/: 550board.sdf.xacro  RXArm_Board.mtl  TagStd41h12_id01.mtl  block_red.sdf  overhead_light.sdf  robot_tag.sdf.xacro  rs_l515_550.sdf  rx200.urdf.xacro
config/: camera_calib.yaml  camera_calibration.yaml  rx200_dh.csv  rx200_pox.csv  rx200_pox.yaml
gazebo_shim_rs/: CMakeLists.txt  listener.cc
models/: data.csv  model (copy).pkl  model.py  svm_train.py
test/: test_camera.py  test_gripper.py  test_kinematics.py  test_rxarm.py
util/: camera_cal.py
